--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  telegram-bot:
+  notification-bot:
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,8 +12,3 @@ services:
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
     volumes:
       - ./logs:/app/logs
-    healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', res => console.log(res.statusCode))"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
