--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
+# Telegram Bot API
 TELEGRAM_BOT_TOKEN=your_bot_token_here
-TELEGRAM_CHAT_ID=your_chat_id_here
+
+# OpenAI API
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o
+
+# Redis Configuration
+REDIS_URL=redis://redis:6379
+
+# Scheduler Configuration (in milliseconds, default: 1 minute)
+SCHEDULER_CHECK_INTERVAL=60000
+
+# Timezone
+DEFAULT_TIMEZONE=UTC
+
+# Logging
+LOG_LEVEL=info
