--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
   "name": "notification-service",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Intelligent Telegram reminder bot using AI",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "telegram",
+    "bot",
+    "reminder",
+    "ai",
+    "openai",
+    "redis"
+  ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "moment-timezone": "^0.5.47",
-    "node-cron": "^3.0.3",
-    "telegraf": "^4.16.3"
+    "dotenv": "^16.3.1",
+    "luxon": "^3.5.0",
+    "moment-timezone": "^0.5.43",
+    "openai": "^4.24.1",
+    "redis": "^4.6.12",
+    "telegraf": "^4.15.0",
+    "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
