--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.1",
     "dotenv": "^16.3.1",
+    "form-data": "^4.0.2",
     "luxon": "^3.5.0",
     "moment-timezone": "^0.5.43",
     "openai": "^4.24.1",
